--- a/jsonl_viewer/templates/jsonl_viewer/base.html
+++ b/jsonl_viewer/templates/jsonl_viewer/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <!-- DataTables CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+    <!-- Chart.js CSS (optional if any specific styles needed) -->
     {% block extra_head %}{% endblock %}
 </head>
 <body>
@@ -31,6 +32,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <!-- DataTables JS -->
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% block extra_scripts %}{% endblock %}
 </body>
 </html>
